<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WheelActivity">

    <include layout="@layout/common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/wheel_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/provide_distance"
                android:inputType="numberSigned"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/wheel_distance"
                android:layout_toRightOf="@+id/wheel_distance"
                android:text="mm"
                android:textSize="@dimen/text_size" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/wheel_distance"
                android:layout_toRightOf="@+id/wheel_distance"
                android:text="mm"
                android:textSize="@dimen/text_size" />


            <EditText
                android:id="@+id/wheel_angle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_toRightOf="@+id/wheel_distance"
                android:hint="@string/provide_angle"
                android:inputType="numberSigned"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/wheel_angle"
                android:text="°"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/wheel_walk"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/wheel_distance"
                android:layout_below="@+id/wheel_distance"
                android:layout_marginTop="@dimen/common_vertical_margin"
                android:text="@string/wheel_walk"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/wheel_turn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/wheel_angle"
                android:layout_below="@+id/wheel_angle"
                android:layout_marginTop="@dimen/common_vertical_margin"
                android:text="@string/wheel_turn"
                android:textSize="@dimen/text_size" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_vertical_margin"
            android:text="@string/wheel_tips"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

</LinearLayout>