<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MotorsActivity">

    <include layout="@layout/common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Spinner
                android:id="@+id/arm_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/arm_action" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Range: "
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/range_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/range_arm_rotation"
                android:textSize="@dimen/text_size" />

        </LinearLayout>


        <Spinner
            android:id="@+id/arm_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_vertical_margin"
            android:entries="@array/arm_direction" />

        <EditText
            android:id="@+id/arm_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_vertical_margin"
            android:hint="@string/provide_angle"
            android:inputType="number"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/arm_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/motors_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>